--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-SixArm.com Bandwidth Speedometer Sample Files
+SixArm.com » Data » Bandwidth speedometer sample files
 
 The sample files contain random text:
 
